# agent-os

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  hatch_build.py  pyproject.toml
.claude/: settings.json
.claude/skills/add-agent/: SKILL.md
.claude/skills/broadcast/: SKILL.md
.claude/skills/check-status/: SKILL.md
.claude/skills/create-proposal/: SKILL.md
.claude/skills/create-task/: SKILL.md
.claude/skills/record-decision/: SKILL.md
.claude/skills/send-message/: SKILL.md
.claude/skills/setup/: SKILL.md
.claude/skills/start-thread/: SKILL.md
.github/workflows/: ci.yml
dashboard/: Makefile  screenshot.py
dashboard/frontend/: package-lock.json  package.json
dashboard/frontend/src/api/: hooks.ts
dashboard/frontend/src/components/: Card.tsx  Layout.tsx  Loading.tsx  TensionBadge.tsx  TimeAgo.tsx
dashboard/frontend/src/pages/: Controls.tsx  Conversation.tsx  Strategy.tsx  Timeline.tsx
docs/: concepts.md  configuration.md  metrics.md  migration.md  production.md  quickstart.md
examples/mini-company/: README.md
examples/mini-company/agents/messages/broadcast/: msg-001.md
examples/mini-company/agents/registry/: agent-builder.md  agent-marketer.md  agent-operator.md
examples/mini-company/agents/state/agent-builder/: soul.md  working-memory.md
examples/mini-company/agents/state/agent-marketer/: soul.md  working-memory.md
examples/mini-company/agents/state/agent-operator/: soul.md  working-memory.md
examples/mini-company/agents/tasks/queued/: task-001.md
examples/mini-company/identity/: principles.md  values.md
examples/mini-company/strategy/: current-focus.md  drives.md
knowledge/technical/: dream-journal-failure-investigation.md
specs/: roadmap-governance.md  roadmap-vision-drives.md
src/agent_os/: __init__.py  __main__.py  agent_cmd.py  agents.py  aios.py  artifacts.py  audit.py  briefing.py  budget.py  circuit_breaker.py  cli.py  composer.py  config.py  core.py  cost_cmd.py  doctor.py  errors.py  events.py  formatting.py  health_cmd.py  logger.py  maintenance.py  metrics.py  notifications.py  observations.py  preflight.py  project.py  read_cmds.py  registry.py  release_notes.py  runner.py  scheduler.py  status.py  task_cmd.py  toml_writer.py  tools.py  workspace.py  write_cmds.py
src/agent_os/dashboard/: Makefile  __init__.py  app.py  config.py  metrics.py  screenshot.py
src/agent_os/dashboard/frontend/: index.html  vite.config.ts
src/agent_os/dashboard/frontend/src/: App.tsx  index.css
src/agent_os/dashboard/frontend/src/api/: hooks.ts
src/agent_os/dashboard/frontend/src/components/: AgentName.tsx  Layout.tsx  Markdown.tsx
src/agent_os/dashboard/frontend/src/pages/: AgentDetail.tsx  AgentList.tsx  Costs.tsx  Health.tsx  Messages.tsx  Overview.tsx  Tasks.tsx
src/agent_os/dashboard/frontend/src/utils/: humanize.ts
src/agent_os/dashboard/parsers/: frontmatter.py  jsonl.py  markdown.py
src/agent_os/dashboard/routers/: agents.py  controls.py  conversation.py  costs.py  feedback.py  health.py  messages.py  notes.py  overview.py  strategy.py  tasks.py
src/agent_os/parsers/: __init__.py  frontmatter.py  jsonl.py
src/agent_os/pollers/: __init__.py  github_pr.py
src/agent_os/prompts/: dream.jinja2  drive_consultation.jinja2  interactive.jinja2  message_triage.jinja2  observe.jinja2  preamble.jinja2  quality_gates.jinja2  reflection.jinja2  thread_response.jinja2  workspace_gates.jinja2
src/agent_os/resources/: agent-os-platform.md.jinja2
tests/: conftest.py  test_agent_cmd.py  test_agents.py  test_aios.py  test_artifacts.py  test_audit.py  test_audit_artifacts.py  test_autonomy.py  test_ax_pass.py  test_briefing.py  test_budget.py  test_circuit_breaker.py  test_cli.py  test_composer.py  test_config.py  test_cost_cmd.py  test_digest.py  test_doctor.py  test_events.py  test_formatting.py  test_health_cmd.py  test_logger.py  test_maintenance.py  test_metrics.py  test_new.py  test_notifications.py  test_observations.py  test_observe.py  test_pollers_github.py  test_preflight.py  test_project.py  test_promote.py  test_read_cmds.py  test_release_notes.py  test_requeue.py  test_runner.py  test_scheduler.py  test_status.py  test_task_cmd.py  test_tools.py  (+2 more)
