[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "agent-os"
dynamic = ["version"]
description = "The open-source operations layer for AI agents."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
authors = [
    { name = "Corvyd", email = "hello@corvyd.ai" },
]
keywords = ["ai", "agents", "operations", "multi-agent", "autonomous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "claude-agent-sdk>=0.1.36",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "tomlkit>=0.12",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
    "pre-commit>=3.6",
]

[project.urls]
Homepage = "https://github.com/corvyd-ai/agent-os"
Documentation = "https://github.com/corvyd-ai/agent-os/tree/main/docs"
Repository = "https://github.com/corvyd-ai/agent-os"
Issues = "https://github.com/corvyd-ai/agent-os/issues"

[project.scripts]
agent-os = "agent_os.cli:main"

# --- Version from git tags (hatch-vcs) ---
# The version is derived from `git describe`. Tag a release with `git tag v1.2.3`.
# Between tags, installs get a dev version like "0.1.0.dev12+gabcdef0".
# hatch-vcs writes src/agent_os/_version.py at build time; that file is
# .gitignored and should never be committed.
[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"
raw-options.root = "."

[tool.hatch.build.hooks.vcs]
version-file = "src/agent_os/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_os"]

# Conditionally bundle the built dashboard frontend into the wheel at
# agent_os/dashboard/_frontend/. The custom hook in hatch_build.py only
# adds the force-include when src/agent_os/dashboard/frontend/dist/ actually exists,
# so `pip install -e .` succeeds without Node.js present. Production
# wheel builds in CI run `npm run build` before `python -m build`, so
# the bundled assets ship in the wheel. See src/agent_os/dashboard/app.py
# for the runtime lookup that serves the frontend when present.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "src/agent_os/dashboard/frontend/node_modules",
    "src/agent_os/dashboard/frontend/dist",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# --- Linting & formatting (ruff) ---

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]
exclude = ["src/agent_os/_version.py"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line length handled by formatter
    "SIM108",  # ternary operator — readability over brevity
    "B010",    # setattr with constant — used in test fixtures
    "E402",    # imports after try/except SDK fallbacks in runner.py
    "N806",    # fallback class assignments (CLIConnectionError = None)
    "N818",    # private sentinel _Unavailable is not a real exception
    "RUF012",  # mutable class attrs used as constants in ErrorClassifier
    "TC001",   # type-checking block — imports are used at runtime
    "TC003",   # type-checking block — stdlib imports used at runtime
]

[tool.ruff.lint.isort]
known-first-party = ["agent_os"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
